@@ -16,6 +16,9 @@
    - stevesk@cvs.openbsd.org 2002/07/09 17:46:25
      [sshd_config.5]
      clarify no preference ordering in protocol list; ok markus@
+   - itojun@cvs.openbsd.org 2002/07/10 10:28:15
+     [sshconnect.c]
+     bark if all connection attempt fails.
 
 20020709
  - (bal) NO_IPPORT_RESERVED_CONCEPT used instead of CYGWIN so other platforms
@@ -1339,4 +1342,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2357 2002/07/11 03:59:18 mouring Exp $
+$Id: ChangeLog,v 1.2358 2002/07/11 04:00:19 mouring Exp $
